objects/Historical_Payments__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historical Payments</relationshipLabel>
        <relationshipName>Historical_Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_USD__c</fullName>
        <formula>MarketRate__r.Ratio_to_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Amount__c</fullName>
        <formula>Amount__c   /   Base_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>YYYYMM</description>
        <label>Date</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>IF( VALUE( MOnth__c ) &lt;= 03, &quot;Q1&quot;,  

  IF( AND( VALUE( MOnth__c )  &gt; 03, VALUE( MOnth__c )  &lt;= 06), &quot;Q2&quot;,  

  IF( AND( VALUE( MOnth__c )  &gt; 06, VALUE( MOnth__c )  &lt;= 09), &quot;Q3&quot;,  

  &quot;Q4&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOnth__c</fullName>
        <formula>RIGHT( Date__c , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketRate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Rate</label>
        <referenceTo>Market_Rate__c</referenceTo>
        <relationshipLabel>Historical Payments</relationshipLabel>
        <relationshipName>Historical_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>LEFT( Date__c , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Historical Payments</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HP-{0000}</displayFormat>
        <label>Historical Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>